# GEMMul8-JAX-Python

./: .gitignore  README.md
GEMMul8/: CMakeLists.txt  README.md  pyproject.toml
GEMMul8/ext/: common.hpp  conv_32i_2_8i_complex.hpp  conv_32i_2_8i_real.hpp  gemmul8_complex.hpp  gemmul8_ffi_cuda.cu  gemmul8_real.hpp  hook.cu  inverse_scaling_real.hpp  pybind.cpp  scaling_fast_real.hpp
GEMMul8/src/GEMMul8/: api.py
ext/: gemmul8.cu  gemmul8_ffi_cuda.cu  inverse_scaling_complex.hpp  scaling_accu_complex.hpp  scaling_accu_real.hpp  scaling_fast_complex.hpp  self_hipify.hpp  table.hpp  template_math.hpp  template_type.hpp
ext/include/: gemmul8.hpp
src/GEMMul8/: api.py
